--- a/contact.html
+++ b/contact.html
@@ -123,11 +123,10 @@
           </div>
         </div>
       </header>
-    <div
+      <div
       class="breadcumb-wrapper"
-      data-bg-src="assets/img/breadcumb/breadcumb-bg.jpg"
-      data-overlay="title"
-      data-opacity="4"
+      style="background-image: url(img/se.jpg);background-position:center;"
+     
     >
       <div class="container z-index-common">
         <h1 class="breadcumb-title">Contact Us</h1>
