--- a/about.html
+++ b/about.html
@@ -125,9 +125,8 @@
       </header>
     <div
       class="breadcumb-wrapper"
-      data-bg-src="assets/img/breadcumb/breadcumb-bg.jpg"
-      data-overlay="title"
-      data-opacity="4"
+      style="background-image: url(img/se.jpg);background-position:center;"
+     
     >
       <div class="container z-index-common">
         <h1 class="breadcumb-title">About Us</h1>
