--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
           <div class="hero-style4">
             <h1 class="hero-title" data-ani="slideindown" data-ani-delay="0.1s">Inovatiove Online</h1>
             <h1 class="hero-title" data-ani="slideindown" data-ani-delay="0.1s">Taxi Services</h1>
-            <p class="hero-text" data-ani="slideinup" data-ani-delay="0.1s">Dramatically scale backward compatible portals after market positioning deliverables. Assertively predominate collaborative rather.</p>
+            <p class="hero-text" data-ani="slideinup" data-ani-delay="0.1s">Urban Taxi is a leading taxi service in the city, with a fleet of the latest cars and experienced drivers. They offer quick, reliable, and affordable service to everyone in the city. Whether you need a ride to the airport or a lift home after a night out, Urban Taxi is there for you.
+            </p>
             <div class="btn-group" data-ani="slideinup" data-ani-delay="0.1s"><a href="about.html" class="as-btn style3">Learn More</a><a href="taxi.html" class="as-btn style2">Find A Taxi</a></div>
           </div>
         </div>
@@ -133,7 +134,8 @@
           <div class="hero-style4">
             <h1 class="hero-title" data-ani="slideindown" data-ani-delay="0.1s">Automative Online</h1>
             <h1 class="hero-title" data-ani="slideindown" data-ani-delay="0.1s">Car Services</h1>
-            <p class="hero-text" data-ani="slideinup" data-ani-delay="0.1s">Dramatically scale backward compatible portals after market positioning deliverables. Assertively predominate collaborative rather.</p>
+            <p class="hero-text" data-ani="slideinup" data-ani-delay="0.1s">Urban Taxi is a leading taxi service in the city, with a fleet of the latest cars and experienced drivers. They offer quick, reliable, and affordable service to everyone in the city. Whether you need a ride to the airport or a lift home after a night out, Urban Taxi is there for you.
+            </p>
             <div class="btn-group" data-ani="slideinup" data-ani-delay="0.1s"><a href="about.html" class="as-btn style3">Learn More</a><a href="taxi.html" class="as-btn style2">Find A Taxi</a></div>
           </div>
         </div>
@@ -144,7 +146,8 @@
           <div class="hero-style4">
             <h1 class="hero-title" data-ani="slideindown" data-ani-delay="0.1s">Get Best Online</h1>
             <h1 class="hero-title" data-ani="slideindown" data-ani-delay="0.1s">Taxi For You</h1>
-            <p class="hero-text" data-ani="slideinup" data-ani-delay="0.1s">Dramatically scale backward compatible portals after market positioning deliverables. Assertively predominate collaborative rather.</p>
+            <p class="hero-text" data-ani="slideinup" data-ani-delay="0.1s">Urban Taxi is a leading taxi service in the city, with a fleet of the latest cars and experienced drivers. They offer quick, reliable, and affordable service to everyone in the city. Whether you need a ride to the airport or a lift home after a night out, Urban Taxi is there for you.
+            </p>
             <div class="btn-group" data-ani="slideinup" data-ani-delay="0.1s"><a href="about.html" class="as-btn style3">Learn More</a><a href="taxi.html" class="as-btn style2">Find A Taxi</a></div>
           </div>
         </div>
