--- a/about.html
+++ b/about.html
@@ -171,7 +171,8 @@
 <li>Riverbank</li>
 <li>Hughson</li>
 <li>Shackleford</li>
-
+<li> 
+Patterson </li>
     </ul>
 </div>
 </div>
@@ -179,6 +180,7 @@
     <div class="dots-list">
     <ul>
 
+<li>California</li>
 <li>Ceres</li>
 <li>Modesto</li>
 <li>Oakdale</li>
