--- a/reviews.html
+++ b/reviews.html
@@ -34,8 +34,8 @@
 
             <li class="active"><a href="index.html">Home</a> </li>
             <li><a href="about.html">About Us</a></li>
-            <li class=""><a href="#">Service</a> </li>
-            <li class=""><a href="#">Gallery</a> </li>     
+            <li class=""><a href="services.html">Service</a> </li>
+            <li class=""><a href="fares.html">fares</a> </li>     
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
