--- a/index.html
+++ b/index.html
@@ -647,7 +647,8 @@
           <div class="info-card style3">
             <div class="info-card_icon"><i class="fal fa-location-dot"></i></div>
             <div class="info-card_content">
-              <p class="info-card_text">Our Adress</p><a href="" class="info-card_link">urbantaxicab</a>
+              <p class="info-card_text">Our Adress</p><a href="" class="info-card_link">2020 Evans Rd, Ceres, <br>
+                CA 95307</a>
             </div>
           </div>
         </div>
