--- a/index.html
+++ b/index.html
@@ -646,11 +646,14 @@
             <div class="info-card_content">
               <p class="info-card_text">Phone Number</p>
               <a href="tel:+(209) 351-0222" class="info-card_link">
+                (209) 351-0222
                   </a>
                   <a href="tel:+2095022222" class="info-card_link">
                     (209) 502-2222  </a> <br>
                 <a href="tel:+2092721410 " class="info-card_link">
-                  (209) 272-1410  </a>
+                  (209) 272-1410  </a><br>
+                  <a href="tel:+2092721410 " class="info-card_link">
+                    (209) 272-1410  </a>
 
             </div>
           </div>
