--- a/services.html
+++ b/services.html
@@ -242,8 +242,8 @@
                     <div class="download-media_icon">
                       <i class="fal fa-file-lines"></i>
                     </div>
-                    <div class="download-media_info">
-                      <h5 class="download-media_title">Fares </h5>
+                    <div class="download-media_info"><a href="fares.html">
+                      <h5 class="download-media_title">Fares </h5></a>
                       <span class="download-media_text"></span>
                     </div>
                     <a href="fares.html" class="download-media_btn"
