--- a/services.html
+++ b/services.html
@@ -22,6 +22,19 @@
     <link rel="stylesheet" href="assets/css/app.min.css" />
     <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+
+<style>
+
+@media (max-width: 767.98px){
+  .header-logo>a>img{height: 80px !important;}
+  
+
+
+}
+
+</style>
+
+
   </head>
   <body class="">
    
